[gd_scene load_steps=5 format=3 uid="uid://bd0ts63cu65yf"]

[ext_resource type="Theme" uid="uid://cdta86b2s4dni" path="res://assets/themes/global_theme.tres" id="1_6h7a4"]
[ext_resource type="Script" uid="uid://dfo208mbyebl4" path="res://common/ConfirmationPopup/ConfirmationPopup.gd" id="1_mgvbs"]
[ext_resource type="Shader" uid="uid://b0n1i03vxwmb7" path="res://assets/shaders/darkenedblur.gdshader" id="3_6h7a4"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_5bxve"]
shader = ExtResource("3_6h7a4")
shader_parameter/lod = 2.5
shader_parameter/mix_percentage = 0.3

[node name="ConfirmationPopup" type="Control" node_paths=PackedStringArray("Header", "Body", "ConfirmButton", "CancelButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_6h7a4")
script = ExtResource("1_mgvbs")
Header = NodePath("PanelContainer/VBoxContainer/HeaderLabel")
Body = NodePath("PanelContainer/VBoxContainer/BodyLabel")
ConfirmButton = NodePath("PanelContainer/VBoxContainer/HBoxContainer/ConfirmButton")
CancelButton = NodePath("PanelContainer/VBoxContainer/HBoxContainer/CancelButton")

[node name="ColorRect" type="ColorRect" parent="."]
material = SubResource("ShaderMaterial_5bxve")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.0666667, 0.0117647, 0.0352941, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -73.5
offset_bottom = 73.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 65

[node name="HeaderLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeadingLabel"
text = "Exit Game"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="BodyLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "You'll end up right back at the bottom.
Are you sure?"
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 24
alignment = 1

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
text = "CANCEL"

[node name="ConfirmButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(145, 0)
layout_mode = 2
text = "CONFIRM"
